--- a/themes/PaperMod/assets/css/common/search.css
+++ b/themes/PaperMod/assets/css/common/search.css
@@ -13,11 +13,17 @@
 
 #searchResults li {
     list-style: none;
-    border-radius: var(--radius);
     padding: 10px;
     margin: 10px 0;
     position: relative;
     font-weight: 500;
+    border-radius: var(--radius);
+    border: 2px solid var(--tertiary);
+}
+
+#searchResults li:hover {
+    transition: transform 0.1s, border-color 0.15s ease;
+    border-color: var(--theme-op);
 }
 
 #searchResults {
